# hermes

./: .gitignore  Cargo.toml  README.md
sample/: test.txt
src/: main.rs  ui.rs
src/email_tools/: cli.rs  mod.rs
