[package]
name = "hermes"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
imap = "2.4.1"

lettre = { version = "0.11", features = ["smtp-transport", "builder"] }
native-tls = "0.2"
serde = "1.0.228"

crossterm = "0.26"
ratatui = { version = "0.23", features = ["crossterm"]}

mail-builder = "0.3"
mail-parser = "0.9"
chrono = "0.4.42"
dotenv = "0.15"
